--- a/index.html
+++ b/index.html
@@ -20,17 +20,25 @@
       property="og:description"
       content="This is a simple webpage to demonstrate basic SEO implementation techniques." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://www.example.com/" />
-    <meta property="og:image" content="http://www.example.com/image.jpg" />
+    <meta
+      property="og:url"
+      content="https://thankful-flower-01487041e.5.azurestaticapps.net/" />
+    <meta
+      property="og:image"
+      content="https://thankful-flower-01487041e.5.azurestaticapps.net/image.jpg" />
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="My Simple SEO Page" />
     <meta
       name="twitter:description"
       content="This is a simple webpage to demonstrate basic SEO implementation techniques." />
-    <meta name="twitter:image" content="http://www.example.com/image.jpg" />
+    <meta
+      name="twitter:image"
+      content="https://thankful-flower-01487041e.5.azurestaticapps.net//image.jpg" />
     <!-- Canonical Link -->
-    <link rel="canonical" href="http://www.example.com/" />
+    <link
+      rel="canonical"
+      href="https://thankful-flower-01487041e.5.azurestaticapps.net/" />
     <!-- Stylesheet -->
     <link rel="stylesheet" href="styles.css" />
   </head>
