--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
       rel="canonical"
       href="https://thankful-flower-01487041e.5.azurestaticapps.net/" />
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://thankful-flower-01487041e.5.azurestaticapps.net/styles.css" />
   </head>
   <body>
     <header>
